[project]
name = "loguru-demo"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    { name = "Alvin", email = "quhao317@163.com" },
]
dependencies = ["loguru>=0.7.3"]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
lint = [
    "mypy>=1.15.0",
    "autopep8>=2.3.2",
]

[tool.pdm.scripts]
start = { call = "main:main" }
check = { composite = ["mypy src", "autopep8 src tests"] }
clean = { call = "clear:main" }

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_decorators = false
check_untyped_defs = true
exclude = ['^.venv\.py$', '^.test\.py$']

[tool.autopep8]
max_line_length = 120
ignore = ['E501', 'W6']
in-place = true
recursive = true
jobs = -1
aggressive = 3
