[project]
name = "thirdpart-loguru"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    { name = "Alvin", email = "quhao317@163.com" },
]
dependencies = ["loguru>=0.7.3"]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
]
lint = [
    "autopep8>=2.3.2",
    "mypy>=1.15.0",
    "pycln>=2.5.0",
]

[tool.pdm]
distribution = true

[tool.pdm.scripts]
start = { call = "main:main" }
check = { composite = [
    "pycln --config=pyproject.toml .",
    "mypy .",
    "autopep8 .",
] }
test = "pytest"
clean = { call = "clear:main" }

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_decorators = false
check_untyped_defs = true
exclude = [
    '.venv',
    '.history',
]

[tool.autopep8]
max_line_length = 120
ignore = ['E501', 'W6']
in-place = true
recursive = true
jobs = -1
aggressive = 3

[tool.pytest.ini_options]
addopts = [
    '-vvs',
    '-p no:warnings',
]
testpaths = [
    'tests',
]
