[project]
name = "thirdpart-loguru"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    { name = "Alvin", email = "quhao317@163.com" },
]
dependencies = [
    "loguru>=0.7.3",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
test = [
    "pytest>=8.4.0",
    "pytest-sugar>=1.0.0",
]
lint = [
    "autopep8>=2.3.2",
    "pycln>=2.5.0",
]
type = [
    "mypy>=1.16.0",
    "mypy-extensions>=1.1.0",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
lint = { composite = [
    "pycln --config=pyproject.toml",
    "autopep8 .",
] }
type = { composite = [
    "mypy .",
] }
test = "pytest"
check = { composite = [
    "lint",
    "type",
    "test",
] }
start = { call = "main:main" }
clean = { call = "clear:main" }

[tool.pycln]
path = "."
all = true
exclude = '\.history'

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_decorators = false
check_untyped_defs = true
exclude = [
    '.venv',
    '.history',
]

[tool.autopep8]
max_line_length = 120
ignore = [
    'E501',
    'W6',
]
in-place = true
recursive = true
jobs = -1
aggressive = 3

[tool.pytest.ini_options]
addopts = [
    '-s',
    '-p no:warnings',
]
testpaths = [
    'tests',
]
