[project]
name = "thirdpart-matplotlib"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "AlvinQ", email = "quhao317@163.com" },
]
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
lint = [
    "pycln>=2.5.0",
    "autopep8>=2.3.2",
]
test = [
    "pytest>=8.4.0",
    "pytest-sugar>=1.0.0",
]
type = [
    "mypy>=1.16.0",
    "mypy-extensions>=1.1.0",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
lint = { composite = [
    "pycln --config=pyproject.toml",
    "autopep8 .",
] }
type = { composite = [
    "mypy .",
] }
test = "pytest"
check = { composite = [
    "lint",
    "type",
    "test",
] }
start = { call = "app:main" }
clean = { call = "clear:main" }
type-install = "mypy . --install-types"


[tool.pycln]
path = "."
all = true
exclude = '\.history'

[tool.mypy]
python_version = '3.13'
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_decorators = false
disallow_untyped_calls = false
disallow_subclassing_any = false
exclude = [
    '.venv',
    '.history',
]

[tool.autopep8]
max_line_length = 120
ignore = [
    'E501',
    'W6',
]
in-place = true
recursive = true
jobs = -1
aggressive = 3

[tool.pytest.ini_options]
addopts = [
    '-s',
    '-p no:warnings',
]
testpaths = [
    'tests',
]
