[project]
name = "pretty_errors_demo"
version = "0.1.0"
authors = [{ name = "Alvin", email = "quhao317@163.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
lint = ["mypy>=1.10.1", "autopep8>=2.3.1"]
debug = ["pretty-errors>=1.2.25"]

[tool.pdm.scripts]
start = { call = "main:main" }
check = { composite = ["mypy src", "autopep8 src tests"] }
clean = { composite = [
    "rm -rf .pdm-build",
    "rm -rf .mypy_cache",
    "rm -rf dist",
    'find . -type d -name "__pycache__" -exec rm -rf {} +',
] }

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_decorators = false
check_untyped_defs = true
exclude = ['^.venv\.py$', '^.test\.py$']

[tool.autopep8]
max_line_length = 120
ignore = ['E501', 'W6']
in-place = true
recursive = true
jobs = -1
aggressive = 3
