[project]
name = "toolchain-setup"
version = "0.1.0"
description = "Setup toolchain demo"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Alvin", email = "quhao317@163.com" },
]
classifiers = [
    "Development Status :: 3 - Production",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
license = "MIT"
dependencies = [
    "click>=8.1.8",
]

[project.optional-dependencies]
lint = [
    "autopep8>=2.3.2",
    "pycln>=2.5.0",
]
type = [
    "mypy>=1.15.0",
    "mypy_extensions>=1.1.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-sugar>=1.0.0",
]

[project.scripts]
toolchain-setup = "toolchain_setup.main:main"

[build-system]
requires = [
    "setuptools>=80.7.1",
    "setuptools-scm>=8.3.1",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { '' = '.' }
include-package-data = true

[tool.setuptools.packages.find]
exclude = ['tests']

[tool.setuptools.package-data]
"toolchain_setup" = [
    "conf/*.json",
]

[tool.pycln]
all = true
exclude = '\.history'

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_decorators = false
check_untyped_defs = true
exclude = [
    '.venv',
    '.history',
]

[tool.autopep8]
max_line_length = 120
ignore = ['E501', 'W6']
in-place = true
recursive = true
jobs = -1
aggressive = 3

[tool.pytest.ini_options]
addopts = [
    '-vvs',
]
testpaths = [
    'tests',
]
