[project]
name = "toolchain-setup"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Alvin", email = "quhao317@163.com" },
]
classifiers = [
    "Development Status :: 3 - Production",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
license = "MIT"
dependencies = [
    "click>=8.2.1",
]

[dependency-groups]
lint = [
    "autopep8>=2.3.2",
    "pycln>=2.5.0",
]
type = [
    "mypy>=1.16.0",
    "mypy_extensions>=1.1.0",
]
test = [
    "pytest>=8.4.0",
    "pytest-sugar>=1.0.0",
]

[project.scripts]
toolchain-setup = "main:main"

[build-system]
requires = [
    "setuptools>=80.7.1",
    "setuptools-scm>=8.3.1",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { '' = '.' }
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    'tests',
]

[tool.setuptools.package-data]
"toolchain_setup" = [
    "conf/*.json",
]

[tool.pycln]
path = "."
all = true
exclude = '\.history|build'

[tool.mypy]
files = [
    ".",
]
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_decorators = false
check_untyped_defs = true
exclude = '\.history|build'

[tool.autopep8]
max_line_length = 120
ignore = [
    'E501',
    'W6',
]
in-place = true
recursive = true
jobs = -1
aggressive = 3
exclude = '.history,build'

[tool.pytest.ini_options]
addopts = [
    '-s',
]
testpaths = [
    'tests',
]
