[metadata]
name = toolchain-setup
version = 0.0.1
classifiers =
    Development Status :: 3 - Production
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = Setup toolchain demo
author = Alvin
author_email = quhao317@163.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    click>=8.1.8
test_requires =
    pytest>=8.3.5
    pytest-sugar>=1.0.0
extras_requires =

[options.extras_require]
type =
    mypy>=1.15.0
    mypy_extensions>=1.1.0
lint =
    autopep8>=2.3.2
    pycln>=2.5.0

[options.packages.find]
where = .
