[metadata]
name = toolchain-setup
version = 0.0.1
classifiers =
    Development Status :: 3 - Production
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = Setup toolchain demo
author = Alvin
author_email = quhao317@163.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    =.
packages = find:
include_package_data = True
install_requires =
    click>=8.1.8

[options.packages.find]
where = .
include =
    toolchain_setup

[options.package_data]
toolchain_setup =
    conf/*.json

[options.entry_points]
console_scripts =
    toolchain-setup=toolchain_setup.main:main

[options.extras_require]
test =
    pytest>=8.3.5
    pytest-sugar>=1.0.0
type =
    mypy>=1.15.0
    mypy_extensions>=1.1.0
lint =
    autopep8>=2.3.2
    pycln>=2.5.0
