[project]
name = "web-fastapi"
version = "0.1.0"
authors = [{ name = "Alvin", email = "quhao317@163.com" }]
dependencies = [
    "fastapi[all]>=0.115.12",
    "loguru>=0.7.3",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.26.0",
    "httpx>=0.28.1",
]
lint = [
    "autopep8>=2.3.2",
    "mypy>=1.15.0",
    "pycln>=2.5.0",
]
http = [
    "hypercorn>=0.17.3",
]

[tool.pdm]
distribution = true

[tool.pdm.scripts]
check = { composite = [
    "pycln --config=pyproject.toml .",
    "mypy .",
    "autopep8 .",
] }
test = "pytest"
clean = { call = "clear:main" }
type_install = "mypy --install-types"
create_cert = "openssl req -x509 -newkey rsa:4096 -keyout cert/key.pem -out cert/cert.pem -days 365 -nodes"

[tool.pycln]
all = true
exclude = '\.history'

[tool.mypy]
python_version = '3.13'
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_decorators = false
disallow_untyped_calls = false
disallow_subclassing_any = false
exclude = [
    '.venv',
    '.history',
]

[tool.autopep8]
max_line_length = 120
ignore = ['E501', 'W6', 'E261']
in-place = true
recursive = true
jobs = -1
aggressive = 3

[tool.pytest.ini_options]
addopts = [
    '-vvs',
    '-p no:warnings',
]
testpaths = [
    'tests',
]
