[project]
name = "flask_demo"
version = "0.1.0"
authors = [{ name = "Alvin", email = "quhao317@163.com" }]
dependencies = [
    "flask-babel>=4.0.0",
    "flask-login>=0.6.3",
    "flask-socketio>=5.5.1",
    "flask[async]>=3.1.0",
    "gevent-websocket>=0.10.1",
    "gevent>=24.11.1",
    "waitress>=3.0.2",
    "wtforms>=3.2.1",
    "xxhash>=3.5.0",
    "paste>=3.10.1",
    "quart>=0.20.0",
]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
test = [
    "beautifulsoup4>=4.12.3",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
]
lint = [
    "autopep8>=2.3.2",
    "mypy>=1.14.1",
]
http = [
    "gunicorn>=23.0.0",
    "tornado>=6.4.2",
    "uwsgi>=2.0.28",
    "hypercorn>=0.17.3",
]

[tool.pdm.scripts]
dev = "python src/run.py"
check = { composite = ["mypy src", "autopep8 src tests"] }
i18n = "pybabel compile -d src/i18n/message"
test = "pytest -v -s tests"
clean = { call = "clear:main" }
type_install = "mypy --install-types"

[tool.mypy]
python_version = '3.13'
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_decorators = false
disallow_untyped_calls = false
disallow_subclassing_any = false
exclude = []

[tool.autopep8]
max_line_length = 120
ignore = ['E501', 'W6']
in-place = true
recursive = true
jobs = -1
aggressive = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-svv"
