[project]
name = "graphene-demo"
version = "0.1.0"
authors = [{ name = "Alvin", email = "quhao317@163.com" }]
dependencies = [
    "graphene>=3.4.3",
    "aiodataloader>=0.4.2",
    "promise>=2.3",
    "pyhumps>=3.8.0",
    "bson>=0.5.10",
]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]
lint = [
    "mypy>=1.15.0",
    "autopep8>=2.3.2",
    "mypy-extensions>=1.0.0",
]
demo = [
    "werkzeug>=3.1.3",
    "pymongo>=4.11.2",
    "mongoengine>=0.29.1",
    "blinker>=1.9.0",
    "factory-boy>=3.3.3",
    "peewee>=3.17.9",
    "psycopg2-binary>=2.9.10",
]

[tool.pdm.scripts]
check = { composite = ["mypy src", "autopep8 src tests"] }
test = "pytest -vvs tests"
clean = { call = "clear:main" }
type_install = "mypy --install-types"

[tool.pycln]
all = true

[tool.mypy]
python_version = '3.13'
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_decorators = false
disallow_untyped_calls = false
disallow_subclassing_any = false
exclude = ['migration/scripts/.+?\.py$']

[tool.autopep8]
max_line_length = 120
ignore = ['E501', 'W6']
in-place = true
recursive = true
jobs = -1
aggressive = 3

[tool.pytest.ini_options]
addopts = [
    '-vvs',
]
filterwarnings = [
    'ignore::DeprecationWarning',
]
