[project]
name = "socketio-demo"
version = "0.1.0"
authors = [
    { name = "Alvin", email = "quhao317@163.com" },
]
dependencies = [
    "loguru>=0.7.3",
    "eventlet>=0.39.1",
    "python-socketio>=5.12.1",
    "python-socketio[client]>=5.12.1",
    "redis>=5.2.1",
]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
lint = [
    "mypy>=1.15.0",
    "autopep8>=2.3.2",
]
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]

[tool.pdm.scripts]
check = { composite = ["mypy src", "autopep8 src tests"] }
check-win = { composite = ["mypy.exe src", "autopep8.exe src tests"] }
test = "pytest -v -s tests"
test-win = "pytest.exe -v -s tests"
clean = { call = "clear:main" }
type_install = "mypy --install-types"

[tool.pycln]
all = true

[tool.mypy]
python_version = '3.13'
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_decorators = false
warn_unused_ignores = false
check_untyped_defs = true
exclude = ['^.venv\.py$', '^.test\.py$']

[tool.autopep8]
max_line_length = 120
ignore = ['E501', 'W6']
in-place = true
recursive = true
jobs = -1
aggressive = 3

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
addopts = [
    '-vvs',
]
