[project]
name = "pdm_demo_app"
version = "0.1.0"
dependencies = ["pdm-demo-lib @ file:///${PROJECT_ROOT}/../lib"]
requires-python = ">=3.12"
authors = [{ name = "Alvin", email = "quhao317@163.com" }]
license = { text = "MIT" }

[project.optional-dependencies]
lint = ["mypy>=1.9.0", "autopep8>=2.1.0"]
test = ["pytest>=8.1.1"]

[tool.pdm.scripts]
start = { call = "app:main" }
check = { composite = ["mypy src", "autopep8 src tests"] }
test = "pytest -v -s tests"
clean = { composite = [
    "rm -rf .pdm-build",
    "rm -rf .mypy_cache",
    "rm -rf .pytest_cache",
    "rm -rf dist",
    'find src -type d -name "__pycache__" -exec rm -rf {} +',
    'find tests -type d -name "__pycache__" -exec rm -rf {} +',
] }

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_decorators = false
check_untyped_defs = true
exclude = ['^.venv\.py$', '^.test\.py$']

[tool.autopep8]
max_line_length = 120
ignore = ['E501', 'W6']
in-place = true
recursive = true
jobs = -1
aggressive = 3

[tool.pytest.ini_options]
# testpaths = ['tests']
# pythonpath = ['src']
addopts = '-vvs'
