[project]
name = "pdm_demo_app"
version = "0.1.0"
dependencies = [
    # 引用本地 python 库, 指向一个目录
    "pdm-demo-lib @ file:///${PROJECT_ROOT}/../lib",
]
requires-python = "==3.13.*"
authors = [{ name = "Alvin", email = "quhao317@163.com" }]
license = { text = "MIT" }

[project.optional-dependencies]
lint = [
    # 代码样式检测依赖
    "mypy>=1.14.1",
    "autopep8>=2.3.2",
]
test = [
    # 测试依赖
    "pytest>=8.3.4",
]

[tool.pdm.scripts]
start = { call = "app:main" }
check = { composite = ["mypy src", "autopep8 src tests"] }
test = "pytest -v -s tests"
clean = { call = "clear:main" }

[tool.mypy]
python_version = "3.13.*"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_decorators = false
check_untyped_defs = true
exclude = ['^.venv\.py$', '^.test\.py$']

[tool.autopep8]
max_line_length = 120
ignore = ['E501', 'W6']
in-place = true
recursive = true
jobs = -1
aggressive = 3

[tool.pytest.ini_options]
# testpaths = ['tests']
# pythonpath = ['src']
addopts = '-vvs'
